--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,50 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
 ul {
-    list-style-type: none;;
+    list-style-type: none;
+    padding: 0;
+}
+
+#content {
+    display: flex;
+}
+
+.project-card {
+    border: 1px solid rgb(173, 169, 169);
+    border-radius: 10%;
+    padding: 10px;
+    margin: 10px;
+    width: 200px;
+}
+
+.todo-card {
+    border: 1px solid rgb(173, 169, 169);
+    border-radius: 10%;
+    padding: 10px;
+}
+
+.project-title {
+    margin-bottom: 10px;
+}
+
+.todo-title {
+    margin-bottom: 5px;
+}
+
+button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.add-project-btn {
+    height: 30px;
+    align-self: flex-end;
 }
