--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,15 @@
     font-family: Arial, sans-serif;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #f0f0f0;
+    min-height: 100vh;
+    padding: 20px;
 }
 
-#content {
-    display: flex;
-}
+
 
 .project-card {
     border: 1px solid rgb(173, 169, 169);
@@ -22,30 +23,43 @@ ul {
     width: 200px;
 }
 
-.todo-card {
-    border: 1px solid rgb(173, 169, 169);
-    border-radius: 10%;
-    padding: 10px;
+.project-title {
     margin-bottom: 10px;
 }
 
-.project-title {
+.todo-card {
+    border: 1px solid rgb(173, 169, 169);
+    border-radius: 10%;
     margin-bottom: 10px;
+}
+
+.todo-content {
+    margin: 0;
+    padding: 10px;
 }
 
 .todo-title {
     margin-bottom: 5px;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 button {
-    margin-top: 10px;
     padding: 5px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    background-color: rgb(214, 214, 210);
 }
 
 .add-project-btn {
     height: 30px;
     align-self: flex-end;
+}
+
+.delete-todo-btn {
+    margin: 0px 10px 5px 10px;
 }
