--- a/src/style.css
+++ b/src/style.css
@@ -13,11 +13,9 @@ body {
     padding: 20px;
 }
 
-
-
 .project-card {
     border: 1px solid rgb(173, 169, 169);
-    border-radius: 10%;
+    border-radius: 5%;
     padding: 10px;
     margin: 10px;
     width: 200px;
@@ -27,10 +25,15 @@ body {
     margin-bottom: 10px;
 }
 
+.project-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .todo-card {
     border: 1px solid rgb(173, 169, 169);
-    border-radius: 10%;
-    margin-bottom: 10px;
+    border-radius: 5%;
 }
 
 .todo-content {
@@ -50,7 +53,7 @@ ul {
 button {
     padding: 5px 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 5%;
     cursor: pointer;
     background-color: rgb(214, 214, 210);
 }
@@ -62,6 +65,11 @@ button {
 
 .delete-todo-btn {
     margin: 0px 10px 5px 10px;
+}
+
+.add-todo-btn {
+    margin: 0px 10px 5px 10px;
+    width: max-content;
 }
 
 .low-priority {
